--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -10,6 +10,8 @@ linters:
     - errcheck
     - gosimple
     - ineffassign
+    - staticcheck
+    - stylecheck
     - govet
     - unused
 
@@ -17,6 +19,9 @@ issues:
   include:
     # Include Close() errcheck https://golangci-lint.run/usage/false-positives/#exc0001
     - EXC0001
+  exclude:
+    # Exclude ALL_CAPS for constants check
+    - ST1003
   # Show all issues
   max-issues-per-linter: 0
   max-same-issues: 0
